# quantized-ml-fpga-inference-lab

./: .shaw_advanced_research_batch_thirteen  README.md  pyproject.toml
docs/: hardware-architecture.md  recruiter-brief.md  research-note.md  throughput-memory-model.md  verification-plan.md
src/quantized_ml_fpga_inference_lab/: __init__.py  quant.py
tests/: test_accelerator_docs_contract.py  test_quant.py
